--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,16 +5,15 @@
         "*.j2": "ansible-jinja",
         "**/defaults/**/*.yml": "ansible-jinja",
         "**/group_vars/**/*": "ansible-jinja",
-        "**/host_vars/**/*": "ansible-jinja",
-        "**/vars/**/*.yml": "ansible-jinja",
-        "**/tasks/**/*.yml": "ansible",
         "**/handlers/*.yml": "ansible",
+        "**/host_vars/**/*": "ansible-jinja",
         "**/meta/*.yml": "ansible",
-        "**/roles/**/*.yml": "ansible",
         "**/playbooks/**/*.yml": "ansible",
-        "**/ansible/**/hosts": "properties",
-        "**/ansible/**/inventory": "properties",
+        "**/roles/**/*.yml": "ansible",
+        "**/tasks/**/*.yml": "ansible",
+        "**/vars/**/*.yml": "ansible-jinja",
         "ansible.cfg": "properties",
+        "inventory": "properties",
     },
     "[ansible]": {
         // "editor.defaultFormatter": "redhat.vscode-yaml",
