Use toml file as inventory source

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./inventory
+inventory = ./inventory.toml
 forks = 30
 
 # additional paths to search for roles in, colon separated
