--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,8 @@
----
+ci:
+  autofix_commit_msg: "chore: auto fixes from `pre-commit` hooks"
+  autoupdate_commit_msg: "chore(pre-commit): autoupdate"
+  autoupdate_schedule: quarterly
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -12,17 +16,24 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.22.0
+    hooks:
+      - id: check-github-workflows
+      - id: check-renovate
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.9-for-vscode
+    hooks:
+      - id: prettier
+
   - repo: https://github.com/ansible/ansible-lint
     rev: v6.14.6
     hooks:
       - id: ansible-lint
-        args: [--write, --exclude, .github]
+        args: [--write]
 
-  - repo: https://github.com/executablebooks/mdformat
-    rev: 0.7.16
-    hooks:
-      - id: mdformat
-        additional_dependencies:
-          - mdformat-toc
-          - mdformat-gfm
-          - mdformat-black
+  # - repo: https://github.com/semaphor-dk/dansabel
+  #   rev: 1.3.0
+  #   hooks:
+  #     - id: dansabel
