--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,16 @@
 // Workspace settings override user settings.
 {
-    "files.associations": {
-        ".ansible-lint": "yaml",
-        "*.j2": "ansible-jinja",
-        "**/defaults/**/*.yml": "ansible-jinja",
-        "**/group_vars/**/*": "ansible-jinja",
-        "**/handlers/*.yml": "ansible",
-        "**/host_vars/**/*": "ansible-jinja",
-        "**/meta/*.yml": "ansible",
-        "**/playbooks/**/*.yml": "ansible",
-        "**/roles/**/*.yml": "ansible",
-        "**/tasks/**/*.yml": "ansible",
-        "**/vars/**/*.yml": "ansible-jinja",
-        "ansible.cfg": "properties",
-        "inventory": "properties",
-    },
-    "[ansible]": {
-        // "editor.defaultFormatter": "redhat.vscode-yaml",
-        // "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true,
-    },
-    // redhat.ansible
-    "ansible.ansibleLint.enabled": true,
-    "ansible.ansibleLint.arguments": "",
-    // redhat.vscode-yaml
-    "yaml.format.printWidth": 120,
+  "files.associations": {
+    ".ansible-lint": "yaml",
+    "**/handlers/*.yml": "ansible",
+    "**/meta/*.yml": "ansible",
+    "**/playbooks/**/*.yml": "ansible",
+    "**/roles/**/*.yml": "ansible",
+    "**/tasks/**/*.yml": "ansible",
+    "ansible.cfg": "properties"
+  },
+  "[ansible]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  }
 }
