--- a/requirements.yml
+++ b/requirements.yml
@@ -1,10 +1,7 @@
 ---
-roles: []
-#  - name: geerlingguy.java
-#    version: 1.9.6
+collections:
+  - name: ansible.posix
+    version: 1.5.2
 
-collections: []
-# - name: ansible.posix
-#   version: 1.2.0
-
-# - name: community.general
+  - name: community.general
+    version: 6.6.0
