--- a/requirements.yml
+++ b/requirements.yml
@@ -3,5 +3,5 @@ collections:
   # - name: ansible.posix
   #   version: 1.5.2
 
-  - name: community.general
-    version: 6.6.0
+  # - name: community.general
+  #   version: 7.0.0
