--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,18 @@ repos:
       - id: check-github-workflows
       - id: check-renovate
 
+  - repo: https://github.com/crate-ci/typos
+    rev: v1.14.9
+    hooks:
+      - id: typos
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.4.2
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+        args: [--check]
+
   - repo: https://github.com/ansible/ansible-lint
     rev: v6.16.0
     hooks:
