--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,15 +1,23 @@
 [defaults]
-inventory = ./inventory.toml
-forks = 30
+inventory = inventory.toml
 
-# additional paths to search for roles in, colon separated
-roles_path = ./roles
+# Additional paths to search for roles in, colon separated
+roles_path = roles
 
-# uncomment this to disable SSH key host checking
+# Disable SSH key host checking
 host_key_checking = False
 
-# change the default callback, you can only have one 'stdout' type  enabled at a time.
+# Task execution is as fast as possible per host in batch as defined by forks or serial
+strategy = host_pinned
+forks = 30
+
+# Chooses which cache plugin to use, the default ‘memory’ is ephemeral
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = .facts_cache/
+
+# Change the default callback
 stdout_callback = yaml
 
-# by default, ansible will use the 'linear' strategy but you may want to try another one
-strategy = free
+# This adds output that shows when a task is started to execute for each host
+show_per_host_start = True
