--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,5 @@
 // Workspace settings override user settings.
 {
-  "[ansible]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true
-  },
   "files.associations": {
     "**/handlers/*.yml": "ansible",
     "**/meta/*.yml": "ansible",
@@ -12,5 +8,10 @@
     "**/tasks/**/*.yml": "ansible",
     ".ansible-lint": "yaml",
     "ansible.cfg": "properties"
-  }
+  },
+  "[ansible]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  },
+  "ansible.ansible.reuseTerminal": true
 }
