feat: update ansible config

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,8 +16,6 @@ gathering = smart
 fact_caching = jsonfile
 fact_caching_connection = .facts_cache/
 
-# Change the default callback
-stdout_callback = yaml
-
-# This adds output that shows when a task is started to execute for each host
-show_per_host_start = True
+# Setup callbacks
+stdout_callback = community.general.yaml
+callbacks_enabled = ansible.posix.profile_roles
