--- a/ansible.cfg
+++ b/ansible.cfg
@@ -18,4 +18,7 @@ fact_caching_connection = .facts_cache/
 
 # Setup callbacks
 stdout_callback = community.general.yaml
-callbacks_enabled = ansible.posix.profile_roles
+callbacks_enabled = ansible.posix.profile_tasks
+
+[callback_profile_tasks]
+task_output_limit = 4
