--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,14 @@ authors = ["DeadNews <aurczpbgr@mozmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-ansible-core = "^2.15.0"
+ansible-core = "^2.15.3"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.lint.dependencies]
 ansible-lint = { version = "^6.18.0", markers = "platform_system != 'Windows'" }
 
+[tool.poetry.group.test.dependencies]
+molecule = "^6.0.1"
+pytest-testinfra = "^9.0.0"
+
 [tool.poetry.group.ci.dependencies]
-ansible-runner = "^2.3.2"
+ansible-runner = "^2.3.4"
