--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,10 @@
 ---
 collections:
+  - name: ansible.posix
+    version: 1.5.4
+
   - name: community.general
     version: 7.3.0
 
-  - name: ansible.posix
-    version: 1.5.4
+  - name: community.docker
+    version: 3.4.8
