--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ vault.key
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
