--- a/molecule/grafana/molecule.yml
+++ b/molecule/grafana/molecule.yml
@@ -1,11 +1,10 @@
 ---
 platforms:
-  - name: molecule-ubuntu
-    image: ubuntu:22.04
+  - name: molecule-distro
+    image: python:latest
 
 provisioner:
   name: ansible
   playbooks:
-    converge: ../default/converge.yml
     create: ../default/create.yml
     destroy: ../default/destroy.yml
