ci: update `ansible-lint` job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Ansible Lint
-        uses: ansible/ansible-lint-action@cad5176ea6f24a38f909d688bd467ec8d942d7e1 # v6.17.0
+      - name: Install poetry
+        run: pipx install poetry
+
+      - uses: actions/setup-python@v4
+        with:
+          cache: poetry
+
+      - name: Install deps
+        run: poetry install
+
+      - name: Lint code
+        run: poetry run ansible-lint
 
   tests:
     name: Tests
