--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install deps
         run: poetry install
 
+      - name: Install ansible-galaxy deps
+        run: poetry run ansible-galaxy install -r requirements.yml
+
       - name: Lint code
         run: poetry run ansible-lint
 
@@ -40,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        molecule_distro: [python]
+        molecule-image: [python]
     steps:
       - uses: actions/checkout@v3
 
@@ -60,4 +63,4 @@ jobs:
       - name: Run tests
         run: poetry run pytest
         env:
-          MOLECULE_DISTRO: ${{ matrix.molecule_distro }}
+          MOLECULE_IMAGE: ${{ matrix.molecule-image }}
