--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,19 @@ authors = ["DeadNews <aurczpbgr@mozmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 ansible-core = "^2.15.3"
+jmespath = "^1.0.1"
 
 [tool.poetry.group.lint.dependencies]
 ansible-lint = { version = "^6.18.0", markers = "platform_system != 'Windows'" }
 
 [tool.poetry.group.test.dependencies]
-molecule = "^6.0.1"
-pytest-testinfra = "^9.0.0"
+molecule = "^6.0.2"
+pytest = "^7.4.0"
+pytest-ansible = "^4.0.0"
 
 [tool.poetry.group.ci.dependencies]
 ansible-runner = "^2.3.4"
+
+[tool.pytest.ini_options]
+addopts = "--verbose"
+testpaths = ["tests"]
