--- a/molecule/playbooks/prepare.yml
+++ b/molecule/playbooks/prepare.yml
@@ -2,7 +2,7 @@
 - name: Prepare
   hosts: molecule
   vars:
-    version: v1.5.7106 # renovate: datasource=github-tags dep_name=gdraheim/docker-systemctl-replacement
+    version: 1.5.7106 # renovate: datasource=pypi dep_name=gdraheim/docker-systemctl-replacement
   tasks:
     - name: Install python3-debian
       ansible.builtin.apt:
@@ -10,21 +10,16 @@
         state: present
       when: ansible_os_family == "Debian"
 
-    - name: Scrape Github API endpoint to obtain tags
-      ansible.builtin.uri:
-        url: https://api.github.com/repos/gdraheim/docker-systemctl-replacement/tags
-      register: _tags
-
-    - name: Get commit sha corresponding to the version
-      ansible.builtin.set_fact:
-        commit_sha: "{{ _tags.json | community.general.json_query(jmesquery) | first }}" # noqa: jinja[invalid]
-      vars:
-        jmesquery: "[?name=='{{ version }}'].commit.sha"
-
     - name: Install systemctl.py
-      ansible.builtin.get_url:
-        url: https://raw.githubusercontent.com/gdraheim/docker-systemctl-replacement/{{ commit_sha }}/files/docker/systemctl3.py
+      ansible.builtin.pip:
+        name: docker-systemctl-replacement=={{ version }}
+        extra_args: --target=/tmp/dsr
+
+    - name: Replace systemctl
+      ansible.builtin.copy:
+        src: /tmp/dsr/systemctl.py
         dest: /usr/bin/systemctl
+        remote_src: true
         mode: "0755"
 
     - name: Ensure run directory for ansible check_systemd
