--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,9 @@ jobs:
       - name: Install ansible-galaxy deps
         run: poetry run ansible-galaxy install -r requirements.yml
 
+      - name: Run docker --info
+        run: docker --info
+
       - name: Run tests
         run: poetry run pytest
         env:
