ci: check `docker info`

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Install ansible-galaxy deps
         run: poetry run ansible-galaxy install -r requirements.yml
 
-      - name: Run docker --info
-        run: docker --info
+      - name: Run docker info
+        run: docker info
 
       - name: Run tests
         run: poetry run pytest
