--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,5 @@
   },
   "ansible.ansible.reuseTerminal": true,
   // pytest
-  "python.testing.pytestEnabled": true,
-  "ansible.python.interpreterPath": "/home/deadnews/.cache/pypoetry/virtualenvs/deadnews-template-ansible-EQAYLr04-py3.11/bin/python"
+  "python.testing.pytestEnabled": true
 }
