--- a/roles/grafana/molecule/tempo/converge.yml
+++ b/roles/grafana/molecule/tempo/converge.yml
@@ -4,5 +4,5 @@
   tasks:
     - name: Install Grafana Tempo
       ansible.builtin.include_role:
-        name: grafana
+        name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
         tasks_from: tempo
