ci: cache ansible reqs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ permissions:
   contents: read
 
 env:
+  ANSIBLE_HOME: ~/.ansible
   PY_COLORS: "1"
 
 jobs:
@@ -20,6 +21,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Cache ansible reqs
+        id: cache-reqs
+        uses: actions/cache@v3
+        with:
+          key: reqs-${{ runner.os }}-${{ hashFiles('requirements.yml') }}
+          path: ${{ env.ANSIBLE_HOME }}/collections
 
       - name: Install poetry
         run: pipx install poetry
@@ -32,6 +40,7 @@ jobs:
         run: poetry install
 
       - name: Install ansible-galaxy deps
+        if: steps.cache-reqs.outputs.cache-hit != 'true'
         run: poetry run ansible-galaxy install -r requirements.yml
 
       - name: Lint code
@@ -47,6 +56,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Cache ansible reqs
+        id: cache-reqs
+        uses: actions/cache@v3
+        with:
+          key: reqs-${{ runner.os }}-${{ hashFiles('requirements.yml') }}
+          path: ${{ env.ANSIBLE_HOME }}/collections
+
       - name: Install poetry
         run: pipx install poetry
 
@@ -58,6 +74,7 @@ jobs:
         run: poetry install
 
       - name: Install ansible-galaxy deps
+        if: steps.cache-reqs.outputs.cache-hit != 'true'
         run: poetry run ansible-galaxy install -r requirements.yml
 
       - name: Run tests
