--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,18 @@
 artifacts/
 vault.key
 
+# vagrant
+.vagrant
+
+# Unit test / coverage reports
+.cache
+.pytest_cache
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 # vscode
 .vscode/*
 !.vscode/settings.json
@@ -13,8 +25,3 @@ vault.key
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
-
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
