--- a/molecule/playbooks/create.yml
+++ b/molecule/playbooks/create.yml
@@ -1,4 +1,6 @@
 ---
+# Test Ansible Roles with Molecule and Docker
+
 - name: Create
   hosts: localhost
   gather_facts: false
@@ -17,10 +19,6 @@
         log_driver: json-file
       register: result
       loop: "{{ molecule_yml.platforms }}"
-
-    - name: Print some info
-      ansible.builtin.debug:
-        msg: "{{ result.results }}"
 
     - name: Fail if container is not running
       when: >
@@ -43,7 +41,7 @@
                     ansible_connection: community.docker.docker
       ansible.builtin.set_fact:
         molecule_inventory: >
-          {{ molecule_inventory | combine(inventory_partial_yaml | from_yaml) }}
+          {{ molecule_inventory | combine(inventory_partial_yaml | from_yaml, recursive=true) }}
       loop: "{{ molecule_yml.platforms }}"
       loop_control:
         label: "{{ item.name }}"
@@ -65,16 +63,10 @@
           molecule group was not found inside inventory groups: {{ groups }}
       run_once: true # noqa: run-once[task]
 
-# we want to avoid errors like "Failed to create temporary directory"
 - name: Validate that inventory was refreshed
   hosts: molecule
   gather_facts: false
   tasks:
-    - name: Check uname
-      ansible.builtin.raw: uname -a
-      register: result
-      changed_when: false
-
-    - name: Display uname info
+    - name: Print inventory groups
       ansible.builtin.debug:
-        msg: "{{ result.stdout }}"
+        var: groups
