feat(docker-app): add role (#83)
* ci(github): update `tests` job
* feat(docker-app): add role
* feat(grafana-loki): update role
* test(molecule): update playbooks

--- a/roles/grafana_loki/molecule/grafana_loki/molecule.yml
+++ b/roles/grafana_loki/molecule/grafana_loki/molecule.yml
@@ -1,10 +1,14 @@
 ---
+driver:
+  name: docker
+
 platforms:
-  - name: molecule-image
+  - name: ${MOLECULE_IMAGE:-python}
     image: ${MOLECULE_IMAGE:-python}
 
 provisioner:
   playbooks:
+    converge: ../../../../molecule/playbooks/converge.yml
     create: ../../../../molecule/playbooks/create.yml
     destroy: ../../../../molecule/playbooks/destroy.yml
     prepare: ../../../../molecule/playbooks/prepare.yml
