--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,15 @@ python = "^3.10"
 ansible-core = "^2.16.2"
 
 [tool.poetry.group.lint.dependencies]
-ansible-lint = { version = "^6.22.1", markers = "platform_system != 'Windows'" }
+ansible-lint = { version = "^6.22.2", markers = "platform_system != 'Windows'" }
 
 [tool.poetry.group.test.dependencies]
 molecule = "^6.0.3"
+molecule-plugins = { version = "^23.5.0", extras = ["docker", "vagrant"] }
 pytest = "^7.4.4"
-pytest-ansible = "^24.1.1"
+pytest-ansible = "^24.1.2"
 
 [tool.pytest.ini_options]
 addopts = "--verbose"
 testpaths = ["tests"]
+markers = ["docker", "molecule", "no_driver", "vagrant"]
