--- a/roles/docker_app/molecule/docker_app/converge.yml
+++ b/roles/docker_app/molecule/docker_app/converge.yml
@@ -1,8 +1,9 @@
 ---
 - name: Converge
-  hosts: molecule
+  hosts: all
+  become: true
+
   tasks:
-    - name: Install Grafana Loki
+    - name: Test role
       ansible.builtin.include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
-        tasks_from: loki
