--- a/roles/docker_compose/tasks/main.yml
+++ b/roles/docker_compose/tasks/main.yml
@@ -21,41 +21,26 @@
   when: docker_compose_env is defined
 
 - name: Pull images for Docker Compose project {{ docker_compose_project }}
-  block:
-    - name: Pull images for Docker Compose project {{ docker_compose_project }}
-      ansible.builtin.command:
-        cmd: docker compose pull
-        chdir: "{{ docker_compose_target_dir }}/{{ docker_compose_project }}"
-      register: docker_compose_pull
-      changed_when: "'layers' in docker_compose_pull.stderr"
-  rescue:
-    - name: List images for Docker Compose project {{ docker_compose_project }}
-      ansible.builtin.command:
-        cmd: docker compose images --format json
-        chdir: "{{ docker_compose_target_dir }}/{{ docker_compose_project }}"
-      register: docker_compose_images
-      changed_when: false
+  community.docker.docker_compose_v2_pull:
+    project_src: "{{ docker_compose_target_dir }}/{{ docker_compose_project }}"
+  register: pull_output
 
-    - name: Print images for Docker Compose project {{ docker_compose_project }}
-      ansible.builtin.debug:
-        var: docker_compose_images.stdout
+- name: Show pull results
+  ansible.builtin.debug:
+    var: pull_output
+  when:
+    - pull_output.failed
+    - or verbosity > 0
 
 - name: Ensure Docker Compose project is up-to-date and running ー {{ docker_compose_project }}
-  block:
-    - name: Ensure Docker Compose project is up-to-date and running ー {{ docker_compose_project }}
-      ansible.builtin.command:
-        cmd: docker compose up -d
-        chdir: "{{ docker_compose_target_dir }}/{{ docker_compose_project }}"
-      register: docker_compose_up
-      changed_when: "'Started' in docker_compose_up.stderr"
-  rescue:
-    - name: List containers for Docker Compose project {{ docker_compose_project }}
-      ansible.builtin.command:
-        cmd: docker compose ps --format json
-        chdir: "{{ docker_compose_target_dir }}/{{ docker_compose_project }}"
-      register: docker_compose_ps
-      changed_when: false
+  community.docker.docker_compose_v2:
+    project_src: "{{ docker_compose_target_dir }}/{{ docker_compose_project }}"
+    pull: never
+  register: compose_output
 
-    - name: Print containers for Docker Compose project {{ docker_compose_project }}
-      ansible.builtin.debug:
-        var: docker_compose_ps.stdout
+- name: Show compose results
+  ansible.builtin.debug:
+    var: compose_output
+  when:
+    - compose_output.failed
+    - or verbosity > 0
