--- a/molecule/playbooks/create.yml
+++ b/molecule/playbooks/create.yml
@@ -41,7 +41,7 @@
                     ansible_connection: community.docker.docker
       ansible.builtin.set_fact:
         molecule_inventory: >
-          {{ molecule_inventory | combine(inventory_partial_yaml | from_yaml, recursive=true) }}
+          {{ molecule_inventory | combine(inventory_partial_yaml | from_yaml) }}
       loop: "{{ molecule_yml.platforms }}"
       loop_control:
         label: "{{ item.name }}"
