--- a/roles/docker_compose/meta/argument_specs.yml
+++ b/roles/docker_compose/meta/argument_specs.yml
@@ -13,12 +13,17 @@ argument_specs:
         required: true
         description: The local path to the Docker Compose file to copy to the remote server.
 
+      docker_compose_target_dir:
+        type: str
+        required: true
+        description: The directory where the Docker Compose projects should be copied to.
+
       docker_compose_env:
         type: str
         required: false
         description: The local path to the Environment file to copy to the remote server.
 
-      docker_compose_target_dir:
+      docker_compose_env_template:
         type: str
-        required: true
-        description: The directory where the Docker Compose projects should be copied to.
+        required: false
+        description: The local path to the Environment file template to copy to the remote server.
