--- a/roles/docker_compose/tasks/main.yml
+++ b/roles/docker_compose/tasks/main.yml
@@ -1,6 +1,13 @@
 ---
 # Deploy Docker Compose projects (with docker compose v2)
 
+- name: Validate mutually exclusive parameters
+  ansible.builtin.assert:
+    that:
+      - docker_compose_env_template is not defined
+    msg: "`docker_compose_env_template` must not be defined when `docker_compose_env` is set."
+  when: docker_compose_env is defined
+
 - name: Create directory for Docker Compose project {{ docker_compose_project }}
   ansible.builtin.file:
     path: "{{ docker_compose_target_dir }}/{{ docker_compose_project }}"
@@ -19,6 +26,13 @@
     dest: "{{ docker_compose_target_dir }}/{{ docker_compose_project }}/.env"
     mode: "0600"
   when: docker_compose_env is defined
+
+- name: Create environment file for Docker Compose project {{ docker_compose_project }}
+  ansible.builtin.template:
+    src: "{{ docker_compose_env_template }}"
+    dest: "{{ docker_compose_target_dir }}/{{ docker_compose_project }}/.env"
+    mode: "0600"
+  when: docker_compose_env_template is defined
 
 - name: Pull images for Docker Compose project {{ docker_compose_project }}
   community.docker.docker_compose_v2_pull:
