--- a/roles/docker_compose/meta/argument_specs.yml
+++ b/roles/docker_compose/meta/argument_specs.yml
@@ -8,15 +8,15 @@ argument_specs:
         required: true
         description: The name of Docker Compose projects which should be deployed.
 
-      docker_compose_source:
-        type: str
-        default: files/docker-compose.yml
-        description: The local path to the Docker Compose file to copy to the remote server.
-
       docker_compose_target_dir:
         type: str
-        default: ~/docker-compose
-        description: The directory where the Docker Compose projects should create respective directories.
+        required: true
+        description: The directory where the Docker Compose projects directory should be created.
+
+      docker_compose_source:
+        type: str
+        required: true
+        description: The local path to the Docker Compose file to copy to the remote server.
 
       docker_compose_env:
         type: str
@@ -27,3 +27,8 @@ argument_specs:
         type: str
         required: false
         description: The local path to the Environment file template to copy to the remote server.
+
+      docker_compose_copy_files:
+        type: list
+        required: false
+        description: A list of files to copy to the Docker Compose projects directory.
