--- a/roles/docker/meta/argument_specs.yml
+++ b/roles/docker/meta/argument_specs.yml
@@ -5,5 +5,19 @@ argument_specs:
     options:
       docker_expose_privileged_ports:
         type: bool
-        default: false
         description: Expose privileged ports (< 1024) on rootlesskit binary.
+      docker_gid:
+        type: int
+        description: The GID to use for the docker group.
+      docker_group:
+        type: str
+        description: The name of the docker group.
+      docker_uid:
+        type: int
+        description: The UID to use for the docker user.
+      docker_user:
+        type: str
+        description: The name of the docker user.
+      docker_user_home:
+        type: str
+        description: The home directory for the docker user.
