--- a/roles/docker_app/molecule/docker_app/molecule.yml
+++ b/roles/docker_app/molecule/docker_app/molecule.yml
@@ -5,8 +5,13 @@ driver:
     name: virtualbox
 
 platforms:
-  - name: jammy
+  - name: ubuntu-22
     box: ubuntu/jammy64
+    config_options:
+      vm.boot_timeout: 600
+    memory: 1024
+  - name: debian-12
+    box: debian/bookworm64
     config_options:
       vm.boot_timeout: 600
     memory: 1024
