--- a/roles/docker/vars/main.yml
+++ b/roles/docker/vars/main.yml
@@ -1,7 +1,9 @@
 ---
-docker_expose_privileged_ports: false
-docker_gid: 800
-docker_group: docker-group
-docker_uid: 800
-docker_user_home: /var/lib/{{ docker_user }}
-docker_user: docker-user
+docker_hold_packages: true
+docker_rootless_expose_privileged_ports: false
+docker_rootless_gid: 800
+docker_rootless_group: docker-group
+docker_rootless_uid: 800
+docker_rootless_user_home: /var/lib/{{ docker_rootless_user }}
+docker_rootless_user: docker-user
+docker_rootless: true
