--- a/roles/docker_app/molecule/docker_app_dind/molecule.yml
+++ b/roles/docker_app/molecule/docker_app_dind/molecule.yml
@@ -11,9 +11,9 @@ driver:
 
 platforms:
   - name: instance
-    # image: geerlingguy/docker-debian12-ansible:latest
+    # image: ${MOLECULE_IMAGE:-python}
+    image: geerlingguy/docker-debian12-ansible:latest
     # image: jrei/systemd-debian:12
-    image: ${MOLECULE_IMAGE:-python}
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
