--- a/roles/docker_app/tasks/main.yml
+++ b/roles/docker_app/tasks/main.yml
@@ -5,12 +5,12 @@
   ansible.builtin.include_role:
     name: docker
   vars:
-    docker_rootless_expose_privileged_ports: false
+    docker_rootless: false
 
 - name: Setup Docker App
-  become: true
-  become_user: docker-user
-  become_flags: --login
+  # become: true
+  # become_user: docker-user
+  # become_flags: --login
   ansible.builtin.import_role:
     name: docker_compose
   vars:
