--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,13 +56,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Cache ansible reqs
-        id: cache-reqs
-        uses: actions/cache@v4
-        with:
-          key: reqs-${{ runner.os }}-${{ hashFiles('requirements.yml') }}
-          path: ${{ env.ANSIBLE_HOME }}/collections
-
       - name: Install poetry
         run: pipx install poetry
 
@@ -73,9 +66,8 @@ jobs:
       - name: Install deps
         run: poetry install
 
-      - name: Install ansible-galaxy deps
-        if: steps.cache-reqs.outputs.cache-hit != 'true'
-        run: poetry run ansible-galaxy install -r requirements.yml
+      - name: Install ansible deps
+        run: poetry run ade install -r requirements.yml
 
       - name: Run tests
         run: make test-ci
