--- a/roles/grafana_loki/tasks/main.yml
+++ b/roles/grafana_loki/tasks/main.yml
@@ -10,7 +10,7 @@
   ansible.builtin.apt:
     name: python3-debian
     state: present
-    update_cache: true
+    cache_valid_time: 3600 # 1h
 
 - name: Add Grafana repository
   ansible.builtin.deb822_repository:
