--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,10 @@
 [defaults]
 inventory = inventory.toml
 
-# Additional paths to search for roles in, colon separated
+# Project-local collections path
+collections_path = .ansible
+
+# Additional paths to search for roles in
 roles_path = roles
 
 # Disable SSH key host checking
