--- a/molecule/playbooks/prepare-systemd.yml
+++ b/molecule/playbooks/prepare-systemd.yml
@@ -1,15 +1,15 @@
 ---
-# Test Ansible Roles with Molecule and Docker
+# Install systemd
 
 - name: Prepare
   hosts: all
 
   tasks:
     - name: Install systemd
+      when: ansible_os_family == "Debian"
       ansible.builtin.apt:
         name:
           - systemd
           - systemd-sysv
         state: present
         update_cache: true
-      when: ansible_os_family == "Debian"
