--- a/roles/docker_app/molecule/docker_app_dind/molecule.yml
+++ b/roles/docker_app/molecule/docker_app_dind/molecule.yml
@@ -11,12 +11,10 @@ driver:
 
 platforms:
   - name: instance
-    # image: ${MOLECULE_IMAGE:-python}
-    image: geerlingguy/docker-debian12-ansible:latest
-    # image: jrei/systemd-debian:12
+    image: geerlingguy/docker-${MOLECULE_IMAGE:-debian12}-ansible:latest
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+      - /sys/fs/cgroup:/sys/fs/cgroup:r
     cgroupns_mode: host
     privileged: true
     pre_build_image: true
