--- a/roles/docker_app/molecule/docker_app_dind/converge.yml
+++ b/roles/docker_app/molecule/docker_app_dind/converge.yml
@@ -5,5 +5,5 @@
 
   tasks:
     - name: Test role
-      ansible.builtin.include_role:
+      ansible.builtin.import_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
