--- a/roles/docker_app/molecule/docker_app_dind/molecule.yml
+++ b/roles/docker_app/molecule/docker_app_dind/molecule.yml
@@ -1,20 +1,13 @@
 ---
-role_name_check: 1
-
-dependency:
-  name: galaxy
-  options:
-    ignore-errors: true
-
 driver:
   name: docker
 
 platforms:
-  - name: instance
-    image: geerlingguy/docker-${MOLECULE_IMAGE:-debian12}-ansible:latest
+  - name: ${MOLECULE_DISTRO:-debian12}
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-debian12}-ansible:latest
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:r
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     cgroupns_mode: host
     privileged: true
     pre_build_image: true
@@ -23,5 +16,4 @@ provisioner:
   name: ansible
   playbooks:
     converge: ${MOLECULE_PLAYBOOK:-converge.yml}
-    # test
     prepare: ../../../../molecule/playbooks/prepare-systemd.yml
