--- a/roles/docker_app/tasks/main.yml
+++ b/roles/docker_app/tasks/main.yml
@@ -2,7 +2,7 @@
 # Deploy Docker App
 
 - name: Install Docker in rootless mode
-  ansible.builtin.include_role:
+  ansible.builtin.import_role:
     name: docker
   vars:
     docker_rootless: false
