--- a/roles/grafana_loki/molecule/grafana_loki/molecule.yml
+++ b/roles/grafana_loki/molecule/grafana_loki/molecule.yml
@@ -3,9 +3,8 @@ driver:
   name: docker
 
 platforms:
-  - name: ${MOLECULE_IMAGE:-python}
-    # image: ${MOLECULE_IMAGE:-python}
-    image: geerlingguy/docker-debian12-ansible:latest
+  - name: ${MOLECULE_DISTRO:-debian12}
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-debian12}-ansible:latest
 
 provisioner:
   playbooks:
