--- a/roles/grafana_loki/molecule/grafana_loki/molecule.yml
+++ b/roles/grafana_loki/molecule/grafana_loki/molecule.yml
@@ -7,8 +7,7 @@ platforms:
     image: geerlingguy/docker-${MOLECULE_DISTRO:-debian12}-ansible:latest
 
 provisioner:
+  name: ansible
   playbooks:
     converge: ../../../../molecule/playbooks/converge.yml
-    create: ../../../../molecule/playbooks/create.yml
-    destroy: ../../../../molecule/playbooks/destroy.yml
     prepare: ../../../../molecule/playbooks/prepare-systemctl.yml
